Emote collapse styling fix

--- a/src/styles/builtins/emotemenu.css
+++ b/src/styles/builtins/emotemenu.css
@@ -58,7 +58,7 @@
     transition: transform 0.1s;
 }
 
-.bd-emote-collapse-icon.bd-open svg {
+.bd-emote-collapse-icon.expanded svg {
     transform: rotate(-90deg);
 }
 
